--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
   "dependencies": {
     "bluebird": "^3.4.1",
     "body-parser": "^1.15.2",
+    "connect-mongo": "^1.3.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
+    "dotenv": "^2.0.0",
     "express": "^4.14.0",
+    "express-session": "^1.14.0",
     "express3-handlebars": "^0.5.2",
     "handlebars": "^4.0.5",
     "merge": "^1.2.0",
